--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-st - simple terminal
---------------------
+st - simple terminal (bandithijo's modification)
+================================================
 st is a simple terminal emulator for X which sucks less.
 
 
